# cpp_learn

./: README.md
cmake/: a.out  main.cpp
cmake_lib/: CMakeLists.txt  good_morning.cpp  hello.cpp  libgreetings.ad  main.cpp
my_sim_pendulum/: CMakeLists.txt  gausu_distribution.cpp  gausu_distribution.hpp  main.cpp
simulation_sample/: CMakeLists.txt  a.out  single_pendulum.cpp  single_pendulum.txt  sp.cpp
